ingress-alb.yaml
### Ingress ALB Config ###
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
name: node-ingress
annotations:
  # config ingress type:alb/elb
  kubernetes.io/ingress.class: alb
  # config ingress alb = listen port 80 and 443
  alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
  # config ingress alb = aws acm ssl arn
  alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:xxxxx:certificate/xxxxxxx
  # config ingress alb redirect http to https
  alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  # config ingress alb = enable http2
  alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
  # config ingress alb = aws waf id
  alb.ingress.kubernetes.io/waf-acl-id: 499e8b99-6671-4614-a86d-adb1810b7fbe
  # config ingress alb = subnet
  alb.ingress.kubernetes.io/subnets: subnet-05e1c98ed0f5b109e,subnet-07f5bb81f661df61b
  # config ingress alb = healtcheck
  alb.ingress.kubernetes.io/success-codes: '200'
  alb.ingress.kubernetes.io/healthcheck-port: '80'
  alb.ingress.kubernetes.io/healthcheck-path: /status
  alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
  alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '8'
  alb.ingress.kubernetes.io/healthy-threshold-count: '3'
  alb.ingress.kubernetes.io/unhealthy-threshold-count: '4'
  # config ingress alb = timeout
  alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=180
  alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
  # config ingress alb = delete protection
  alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true
  # config ingress alb = public
  alb.ingress.kubernetes.io/scheme: internet-facing
  # config ingress alb = private
  ## alb.ingress.kubernetes.io/scheme: internal
  # config ingress alb = tagging
  alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
spec:
  tls:
  - hosts:
    - www.example.com  #config domain alb
rules:
    - host: www.example.com  # config domain alb
      http:
        paths:
        - backend:
            serviceName: node-web
            servicePort: 80
